--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,4 +1,4 @@
 .left-login{
-    background-image: url("../img/banner_3.png"); 
+    background-image: url("../img/login_background.png"); 
     background-size: cover;
 }
