--- a/public/assets/css/wt.css
+++ b/public/assets/css/wt.css
@@ -8,8 +8,8 @@
 :root {
     --primary-color: #13678A;
     --primary-color-text: #fff;
-    --secondary-color: #deee00;
-    --secondary-color-text: #000;
+    --secondary-color: #4AA68B;
+    --secondary-color-text: #fff;
     --surface: #fff;
     --surface-color-text: #000;
     --border-radius: 7px;
@@ -348,12 +348,10 @@ body {
     padding: 10px;
 }
 
-.wt-btn-with-icon {
-    display: flex;
-    align-items: center;
-}
+.wt-btn-with-icon {}
 
 .wt-btn-with-icon>i.material-icons {
+    vertical-align: -5px;
     padding-right: 8px;
 }
 
@@ -424,7 +422,9 @@ body {
     padding: 8px;
 }
 
-input, select {
+input,
+select,
+textarea {
     border-radius: var(--border-radius);
     margin-top: 5px;
     font-size: 15px;
@@ -432,7 +432,7 @@ input, select {
     padding: 12px;
     border: none;
     background-color: #f5f5f5;
-    width: 100%;
+    width: calc(100% - 20px);
 
 }
 
@@ -576,4 +576,144 @@ a {
 
 .wt-color-grey {
     color: #848484;
+}
+
+/* Website */
+
+
+.wt-banner {
+    position: relative;
+}
+
+.wt-banner-content {
+    position: absolute;
+}
+
+.banner-home-1\@t {
+    top: 150px;
+    left: 20px;
+    width: 420px;
+}
+
+.banner-home-1\@p {
+    top: 40px;
+    left: 20px;
+    width: 160px;
+}
+
+.banner-home-2\@t {
+    top: 80px;
+    left: 20px;
+    width: 520px;
+}
+
+.banner-home-2\@p {
+    top: 80px;
+    left: 20px;
+    width: 160px;
+}
+
+.banner-about-2\@t {
+    top: 80px;
+    left: 20px;
+    width: 520px;
+}
+
+.banner-about-2\@p {
+    top: 40px;
+    left: 20px;
+    width: 160px;
+}
+
+/* Login */
+
+.left-login {
+    background-image: url("../img/login_background.png");
+    background-size: cover;
+}
+
+/* Panel */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+html {
+    background-color: #F5F5F8;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.panel-content {
+    padding-left: 40px;
+    padding-top: 40px;
+    padding-right: 40px;
+}
+
+.panel-sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 256px;
+    width: 256px;
+    background: var(--primary-color);
+    padding: 0px;
+}
+
+.panel-sidebar-menu {
+    color: var(--primary-color-text);
+}
+
+.panel-sidebar-logo {
+    text-align: center;
+    padding: 16px;
+}
+
+.panel-sidebar-menu>li {
+    cursor: pointer;
+    align-items: center;
+    display: flex;
+    padding: 16px;
+}
+
+.panel-sidebar-menu>li a {
+    color: var(--primary-color-text);
+    text-decoration: none;
+    display: contents;
+}
+
+.panel-sidebar-menu>li:hover {
+    background-color: #2090bc;
+}
+
+.menu-icon {
+    padding-left: 10px;
+    text-align: left;
+    padding-right: 20px;
+}
+
+.menu-title {
+    text-align: left;
+    padding-right: 8px;
+}
+
+@media (min-width: 1024px) {
+    .panel-content {
+        margin-left: 256px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .panel-sidebar {
+        display: none;
+    }
 }
