--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,4 +1,5 @@
 {{> sidebar}}
+{{> header}}
 <div class="panel-content">
     <div class="wt-grid-container">
         <div class="wt-grid-item size-12@p size-9@t">
@@ -11,8 +12,8 @@
                             class="material-icons">add</i>Add patient</button>
                 </div> -->
             <div class="wt-text-align-right">
-                <button class="wt-btn wt-btn-secondary wt-btn-with-icon" onclick="openModal('forgotModal')"><i
-                        class="material-icons">add</i> ADD PATIENT</button>
+                <button class="wt-btn wt-btn-secondary wt-btn-with-icon" onclick="openModal('forgotModal')">
+                    <i class="material-icons">add</i> ADD PATIENT</button>
             </div>
         </div>
         <div class="wt-grid-item size-12@p size-12@t">
@@ -98,11 +99,11 @@
                 </div>
                 <div class="wt-grid-item size-12@p size-12@t">
                     <label>Bio</label>
-                    <textarea rows="3"></textarea>
+                    <textarea rows="5"></textarea>
                 </div>
                 <div class="wt-grid-item size-12@p">
                     <div class="wt-text-align-right">
-                        <button class="wt-btn wt-btn-secondary" onclick="openModal('forgotModal')">ADD PATIENT</button>
+                        <button class="wt-btn wt-btn-secondary">ADD PATIENT</button>
                     </div>
                 </div>
                 <div class="wt-grid-item size-12@p">
