--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,25 +1,27 @@
-<div class="panel-sidebar">
-    <div class="panel-sidebar-logo">
-        <img src="./assets/img/logo_diabetes_white.png" width="120px" alt="">
+<div id="main_sidebar">
+    <div class="panel-sidebar">
+        <div class="panel-sidebar-logo">
+            <img src="./assets/img/logo_diabetes_white.png" width="120px" alt="">
+        </div>
+        <ul class="panel-sidebar-menu">
+            <li>
+                <a href="./dashboard">
+                    <span class="menu-icon"><i class="material-icons">add</i></span>
+                    <span class="menu-title">Dashboard</span>
+                </a>
+            </li>
+            <li>
+                <a href="./profile">
+                    <span class="menu-icon"><i class="material-icons">add</i></span>
+                    <span class="menu-title">Profile</span>
+                </a>
+            </li>
+            <li>
+                <a href="./patient_comments">
+                    <span class="menu-icon"><i class="material-icons">add</i></span>
+                    <span class="menu-title">Patient comments</span>
+                </a>
+            </li>
+        </ul>
     </div>
-    <ul class="panel-sidebar-menu">
-        <li>
-            <a href="./dashboard">
-                <span class="menu-icon"><i class="material-icons">add</i></span>
-                <span class="menu-title">Dashboard</span>
-            </a>
-        </li>
-        <li>
-            <a href="./profile">
-            <span class="menu-icon"><i class="material-icons">add</i></span>
-            <span class="menu-title">Profile</span>
-            </a>
-        </li>
-        <li>
-            <a href="./patient_comments">
-            <span class="menu-icon"><i class="material-icons">add</i></span>
-            <span class="menu-title">Patient comments</span>
-            </a>
-        </li>
-    </ul>
 </div>
