--- a/views/patient_comments.hbs
+++ b/views/patient_comments.hbs
@@ -1,4 +1,8 @@
 {{> sidebar}}
 <div class="panel-content">
-    patient_comments
+    
+    <ul>
+        <li>Health</li>
+        <li>Support2</li>
+    </ul>
 </div>
