--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,7 +1,7 @@
 <div id="main_sidebar">
     <div class="panel-sidebar">
         <div class="panel-sidebar-logo">
-            <img src="./assets/img/logo_diabetes_white.png" width="120px" alt="">
+            <img src="/assets/img/logo_diabetes_white.png" width="120px" alt="">
         </div>
         <ul class="panel-sidebar-menu">
             <li>
