--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diabetes@Home</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="icon" href="./assets/img/logo_diabetes_black.png">
+    <link rel="icon" href="/assets/img/logo_diabetes_black.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/wt.css">
+    <link rel="stylesheet" href="/assets/css/wt.css">
 </head>
 <body>
     {{{body}}}
 </body>
-<script src="./assets/js/wt.js">
+<script src="/assets/js/wt.js">
 
 </script>
 </html>
