rendered dashboard complete

--- a/public/assets/css/wt.css
+++ b/public/assets/css/wt.css
@@ -5,6 +5,7 @@
     font-size: 5vw;
 }
 
+
 :root {
     --primary-color: #13678A;
     --primary-color-text: #fff;
@@ -739,6 +740,26 @@ ul {
     text-decoration: none;
     display: contents;
 }
+
+/* .panel-sidebar-logout {
+    color: var(--primary-color-text);
+    bottom: 0;
+}
+
+.panel-sidebar-logout> ul li{
+    cursor: pointer;
+    align-items: center;
+    display: flex;
+    padding: 16px;
+}
+
+.panel-sidebar-logout>li a {
+    color: var(--primary-color-text);
+    text-decoration: none;
+    display: contents;
+} */
+
+/* -------------- */
 
 .panel-sidebar-menu.primary-color>li a {
     color: var(--primary-color);
