--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,3 +1,4 @@
+{{!-- Sidbar toggle button for phone --}}
 <div class="header-content">
     <button id="sidebar-button" class="wt-btn-icon wt-hidden@t wt-visible@p"><i class="material-icons">menu</i></button>
 </div>
