--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,3 +1,4 @@
+{{!-- Why the id? --}}
 <div id="main_sidebar">
     <div class="panel-sidebar">
         <div class="panel-sidebar-logo">
@@ -6,20 +7,26 @@
         <ul class="panel-sidebar-menu">
             <li>
                 <a href="./dashboard">
-                    <span class="menu-icon"><i class="material-icons">add</i></span>
+                    <span class="menu-icon"><i class="material-icons">dashboard</i></span>
                     <span class="menu-title">Dashboard</span>
                 </a>
             </li>
             <li>
                 <a href="./profile">
-                    <span class="menu-icon"><i class="material-icons">add</i></span>
+                    <span class="menu-icon"><i class="material-icons">person</i></span>
                     <span class="menu-title">Profile</span>
                 </a>
             </li>
             <li>
                 <a href="./patient_comments">
-                    <span class="menu-icon"><i class="material-icons">add</i></span>
+                    <span class="menu-icon"><i class="material-icons">message</i></span>
                     <span class="menu-title">Patient comments</span>
+                </a>
+            </li>
+            <li id="logout-bottom-align">
+                <a href="./login">
+                    <span class="menu-icon"><i class="material-icons">logout</i></span>
+                    <span class="menu-title">Logout</span>
                 </a>
             </li>
         </ul>
