Fixed add Patient Modal

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -95,6 +95,18 @@
                         <label>Last Name</label>
                         <input name="lastName" type="text" />
                     </div>
+                    <div class="wt-grid-item size-6@t">
+                        <label>Email</label>
+                        <input name="lastName" type="text" />
+                    </div>
+                    <div class="wt-grid-item size-6@t">
+                        <label>Date of Birth (dd/mm/yyyy)</label>
+                        <input name="lastName" type="text" />
+                    </div>
+                    <div class="wt-grid-item size-6@t">
+                        <label>Screen Name</label>
+                        <input name="lastName" type="text" />
+                    </div>
                     <div class="wt-grid-item size-12@t">
                         <label>Bio</label>
                         <textarea rows="5"></textarea>
