Small changes in UI

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        {{!-- Pateint Data Card Rows --}}
+        {{!-- Patient Data Card Rows --}}
         <div class="wt-grid-item size-12@t">
             <div class="wt-card-content">
                 <div class="wt-grid-container">
@@ -49,7 +49,7 @@
                 <div class="wt-card-content">
                     <div class="wt-grid-container">
                         <div class="wt-grid-item size-1@t">
-                            <img class="wt-border-rounded" src="/assets/img/patient_img.png" width="40px" alt="">
+                            <img class="wt-border-rounded" src="/assets/img/patient_img.png" width="40px">
                         </div>
                         <div class="wt-grid-item size-2@t">
                             {{firstName}} {{lastName}}
@@ -67,7 +67,7 @@
                             data
                         </div>
                         <div class="wt-grid-item size-1@t">
-                            <i class="material-icons" onclick="openModal('patientCommentModal')">message</i>
+                            <i class="material-icons" style="cursor: pointer;" onclick="openModal('patientCommentModal')">message</i>
                         </div>
                     </div>
                 </div>
