--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,4 +1,66 @@
 {{> sidebar}}
 <div class="panel-content">
-    profile
+    <div class="wt-grid-container">
+
+        {{!-- Profile Picture --}}
+        <div class="wt-grid-item size-4@t">
+            <div class="wt-grid-item size-12@t">
+                <img class="wt-border-circle" src="/assets/img/doctor.jpg" width="180px" height="180px">
+            </div>
+            <div class="wt-grid-item size-12@t">
+                <h3>Brooklyn Simmons</h3>
+                <p style="color: gray; font-size:small;">Accredited Practicing Dietician</p>
+            </div>
+        </div>
+
+        {{!-- Bio Box --}}
+        <div class="wt-grid-item size-8@t">
+            <div class="wt-card">
+                <div class="wt-card-content">
+                    <div class="wt-grid-item size-12@t">
+                        <form>
+                            <div class="wt-grid-container">
+                                <div class="wt-grid-item size-10@t">
+                                    <strong>Your Bio</strong>
+                                </div>
+                                <div class="wt-grid-item size-2@t">
+                                    <i class="material-icons" style="font-size: large; color:gray">edit</i>
+                                </div>
+                                <div class="wt-grid-item size-12@t">
+                                    <textarea rows="5"></textarea>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        {{!-- Details Box --}}
+        </div class="wt-grid-item size-12@t">
+            <div class="wt-card">
+                    <div class="wt-card-content">
+                        <div class="wt-grid-item size-12@t">
+                            <form>
+                                <div class="wt-grid-container">
+                                    <div class="wt-grid-item size-10@t">
+                                        <strong>Your Details</strong>
+                                    </div>
+                                    <div class="wt-grid-item size-2@t" style="text-align: right;">
+                                        <i class="material-icons" style="font-size: large; color:gray">edit</i>
+                                    </div>
+                                    <div class="wt-grid-item size-10@t"> 
+                                        Your Bio
+                                    </div>
+                                    
+                                    <div class="wt-grid-item size-12@t">
+                                        <textarea rows="5"></textarea>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </div>
 </div>
