Changes in modal form

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -97,15 +97,15 @@
                     </div>
                     <div class="wt-grid-item size-6@t">
                         <label>Email</label>
-                        <input name="lastName" type="text" />
+                        <input name="email" type="email" />
                     </div>
                     <div class="wt-grid-item size-6@t">
-                        <label>Date of Birth (dd/mm/yyyy)</label>
-                        <input name="lastName" type="text" />
+                        <label>Date of Birth</label>
+                        <input name="lastName" type="date" />
                     </div>
                     <div class="wt-grid-item size-6@t">
                         <label>Screen Name</label>
-                        <input name="lastName" type="text" />
+                        <input name="screenName" type="text" />
                     </div>
                     <div class="wt-grid-item size-12@t">
                         <label>Bio</label>
