--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -20,13 +20,13 @@
                     <div class="wt-grid-item size-12@t">
                         <form>
                             <div class="wt-grid-container">
-                                <div class="wt-grid-item size-10@t">
+                                <div class="wt-grid-item size-11@t" style="padding: 2px;">
                                     <strong>Your Bio</strong>
                                 </div>
-                                <div class="wt-grid-item size-2@t">
-                                    <i class="material-icons" style="font-size: large; color:gray">edit</i>
+                                <div class="wt-grid-item size-1@t" style="padding: 2px;">
+                                    <i class="material-icons" style="font-size: large; color:gray;">edit</i>
                                 </div>
-                                <div class="wt-grid-item size-12@t">
+                                <div class="wt-grid-item size-12@t" style="padding: 5px;">
                                     <textarea rows="5"></textarea>
                                 </div>
                             </div>
@@ -49,12 +49,37 @@
                                     <div class="wt-grid-item size-2@t" style="text-align: right;">
                                         <i class="material-icons" style="font-size: large; color:gray">edit</i>
                                     </div>
-                                    <div class="wt-grid-item size-10@t"> 
-                                        Your Bio
+                                    <div class="wt-grid-item size-6@t">
+                                        <label>Email</label>
+                                        <input name="email" type="email" />
                                     </div>
-                                    
-                                    <div class="wt-grid-item size-12@t">
-                                        <textarea rows="5"></textarea>
+                                    <div class="wt-grid-item size-6@t">
+                                        <label>Contact Number</label>
+                                        <input name="contactNumber" type="tel" />
+                                    </div>
+                                    <div class="wt-grid-item size-6@t">
+                                        <label>Address</label>
+                                        <input name="address" type="text" />
+                                    </div>
+                                    <div class="wt-grid-item size-3@t">
+                                        <label>City/Suburb</label>
+                                        <input name="city/suburb" type="text" />
+                                    </div>
+                                    <div class="wt-grid-item size-3@t">
+                                        <label>State</label>
+                                        <input name="state" type="text" />
+                                    </div>
+                                    <div class="wt-grid-item size-6@t">
+                                        <label>Password</label>
+                                        <input name="password" type="password" />
+                                    </div>
+                                    <div class="wt-grid-item size-3@t">
+                                        <label>Country</label>
+                                        <input name="country" type="text" />
+                                    </div>
+                                    <div class="wt-grid-item size-3@t">
+                                        <label>Postcode</label>
+                                        <input name="postcode" type="text" />
                                     </div>
                                 </div>
                             </form>
