--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,19 +4,19 @@
             <a href="./index.html"></a><img src="./assets/img/logo_diabetes_black.png" alt="" width="120px">
         </div>
         <div class="wt-header-menu@t">
-            <span class="active-menu"><a href="./index.html">HOME</a></span>
-            <span><a href="./about.html">ABOUT DIABETES</a></span>
-            <span><a href="./login.html" class="wt-btn-outlined">LOGIN</a></span>
+            <span class="active-menu"><a href="./">HOME</a></span>
+            <span><a href="./about">ABOUT DIABETES</a></span>
+            <span><a href="./login" class="wt-btn-outlined">LOGIN</a></span>
         </div>
     </div>
     <div class="wt-header@p wt-text-align-center wt-hidden@t wt-visible-@p">
         <div class="wt-header-icon">
-            <a href="./index.html"></a><img src="./assets/img/logo_diabetes_black.png" alt="" width="120px">
+            <a href="./"></a><img src="./assets/img/logo_diabetes_black.png" alt="" width="120px">
         </div>
         <div class="wt-header-menu@p">
-            <span class="active-menu"><a href="./index.html">HOME</a></span>
-            <span><a href="./about.html">ABOUT DIABETES</a></span>
-            <span><a href="./login.html" class="wt-btn-outlined">LOGIN</a></span>
+            <span class="active-menu"><a href="./">HOME</a></span>
+            <span><a href="./about">ABOUT DIABETES</a></span>
+            <span><a href="./login" class="wt-btn-outlined">LOGIN</a></span>
         </div>
     </div>
 </header>
