--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
 <div class="wt-grid-container " style="min-height: calc(100vh);">
     <div class="left-login wt-grid-item wt-hidden@p wt-visible@t size-6@t">
     </div>
-    <div class="wt-grid-item size-12@p size-6@t">
+    <div class="wt-grid-item size-12@p size-6@t wt-bg-white">
         <div class="wt-grid-container wt-padding-large">
             <div class="wt-grid-item size-12@p size-12@t">
                 <a class="wt-color-primary wt-btn-with-icon" onclick="history.back()"><i
@@ -26,7 +26,8 @@
             </div>
             <div class="wt-grid-item size-12@p">
                 <button class="wt-btn wt-btn-primary wt-btn-large wt-fullwidth"
-                    onclick="openModal('forgotModal')">Login</button>
+                href="./dashboard"
+                    onclick="">Login</button>
             </div>
         </div>
     </div>
