--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,39 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About diabetes - Diabetes@Home</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="icon" href="./assets/img/logo_diabetes_black.png">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/wt.css">
-</head>
-
-<body>
-    <header class="">
+<header class="">
         <div class="wt-header@t wt-hidden@p wt-visible-flex@t ">
             <div class="wt-header-icon">
-                <a href="./index.html"></a><img src="./assets/img/logo_diabetes_black.png" alt="" width="120px">
+                <a href="./"></a><img src="./assets/img/logo_diabetes_black.png" alt="" width="120px">
             </div>
             <div class="wt-header-menu@t">
-                <span><a href="./index.html">HOME</a></span>
-                <span class="active-menu"><a href="./about.html">ABOUT DIABETES</a></span>
-                <span><a href="./login.html" class="wt-btn-outlined">LOGIN</a></span>
+                <span><a href="./">HOME</a></span>
+                <span class="active-menu"><a href="./about">ABOUT DIABETES</a></span>
+                <span><a href="./login" class="wt-btn-outlined">LOGIN</a></span>
             </div>
         </div>
         <div class="wt-header@p wt-text-align-center wt-hidden@t wt-visible-@p">
             <div class="wt-header-icon">
-                <a href="./index.html"></a><img src="./assets/img/logo_diabetes_black.png" alt="" width="120px">
+                <a href="./"></a><img src="./assets/img/logo_diabetes_black.png" alt="" width="120px">
             </div>
             <div class="wt-header-menu@p">
-                <span><a href="./index.html">HOME</a></span>
-                <span class="active-menu"><a href="./about.html">ABOUT DIABETES</a></span>
-                <span><a href="./login.html" class="wt-btn-outlined">LOGIN</a></span>
+                <span><a href="./">HOME</a></span>
+                <span class="active-menu"><a href="./about">ABOUT DIABETES</a></span>
+                <span><a href="./login" class="wt-btn-outlined">LOGIN</a></span>
             </div>
         </div>
     </header>
@@ -114,9 +97,3 @@
             </div>
         </div>
     </section>
-</body>
-<script src="./assets/js/wt.js">
-
-</script>
-
-</html>
