changed and updated menu icons

--- a/views/partials/clinician_patient_menu.hbs
+++ b/views/partials/clinician_patient_menu.hbs
@@ -1,25 +1,25 @@
 <ul class="panel-sidebar-menu primary-color">
     <li>
         <a href="./clinician_patient_data">
-            <span class="menu-icon"><i class="material-icons">add</i></span>
+            <span class="menu-icon-small"><i class="material-icons">favorite_border</i></span>
             <span class="menu-title">Health Data</span>
         </a>
     </li>
     <li>
         <a href="./clinician_patient_support_messages">
-            <span class="menu-icon"><i class="material-icons">add</i></span>
+            <span class="menu-icon-small"><i class="material-icons">mail_outline</i></span>
             <span class="menu-title">Support messages</span>
         </a>
     </li>
     <li>
         <a href="./clinician_patient_notes">
-            <span class="menu-icon"><i class="material-icons">add</i></span>
+            <span class="menu-icon-small"><i class="material-icons-outlined">sticky_note_2</i></span>
             <span class="menu-title">Clinical notes</span>
         </a>
     </li>
     <li>
         <a href="./clinician_patient_profile">
-            <span class="menu-icon"><i class="material-icons">add</i></span>
+            <span class="menu-icon-small"><i class="material-icons-outlined">account_circle</i></span>
             <span class="menu-title">Profile</span>
         </a>
     </li>
