--- a/views/partials/clinician_sidebar.hbs
+++ b/views/partials/clinician_sidebar.hbs
@@ -6,19 +6,19 @@
         <ul class="panel-sidebar-menu">
             <li>
                 <a href="./clinician_dashboard">
-                    <span class="menu-icon"><i class="material-icons">add</i></span>
+                    <span class="menu-icon"><i class="material-icons">people_alt</i></span>
                     <span class="menu-title">Dashboard</span>
                 </a>
             </li>
             <li>
                 <a href="./clinician_profile">
-                    <span class="menu-icon"><i class="material-icons">add</i></span>
+                    <span class="menu-icon"><i class="material-icons">person</i></span>
                     <span class="menu-title">Profile</span>
                 </a>
             </li>
             <li>
                 <a href="./clinician_patients_comments">
-                    <span class="menu-icon"><i class="material-icons">add</i></span>
+                    <span class="menu-icon"><i class="material-icons">insert_comment</i></span>
                     <span class="menu-title">Patient comments</span>
                 </a>
             </li>
