--- a/public/assets/css/wt.css
+++ b/public/assets/css/wt.css
@@ -354,7 +354,7 @@ body {
 .wt-btn-outlined {
     cursor: pointer;
     border-radius: 25px;
-    border: 1px solid black;
+    border: 1px solid rgb(254, 250, 250);
     padding: 10px;
 }
 
@@ -772,6 +772,12 @@ ul {
     padding-left: 10px;
     text-align: left;
     padding-right: 20px;
+}
+
+.menu-icon-small {
+    padding-left: 5px;
+    text-align: left;
+    padding-right: 5px;
 }
 
 .menu-title {
